--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -266,6 +266,7 @@ table.gallery td {
 table[style] {
 	float: none !important;
 	margin-left: 0 !important;
+	width: 100% !important;
 }
 
 table.navbox td.navbox-group {
@@ -308,7 +309,10 @@ table td,
 table th {
 	border: 1px solid #cccccc;
 	padding: 3px;
-	word-break: break-word;
+}
+
+table th {
+	word-break: normal;
 }
 
 .mwm-message.mwm-notice {
@@ -427,7 +431,7 @@ html {
 }
 
 body {
-	font-size: 1em;
+	font-size: 0.8em;
 	margin: 0;
 	line-height: 1;
 	color: black;
